QtBeef/src/Qt/qtextformat.bf

class QTextListFormat : IQTextListFormat, IQTextFormat
{
	private QTextListFormat_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTextListFormat_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this()
	{
		this.ptr = CQt.QTextListFormat_new();
	}
	public this(IQTextListFormat param1)
	{
		this.ptr = CQt.QTextListFormat_new2((.)param1?.ObjectPtr);
	}
	public ~this()
	{
		CQt.QTextListFormat_Delete(this.ptr);
	}
	public bool IsValid()
	{
		return CQt.QTextListFormat_IsValid((.)this.ptr.Ptr);
	}
	public void SetStyle(QTextListFormat_Style style)
	{
		CQt.QTextListFormat_SetStyle((.)this.ptr.Ptr, style);
	}
	public QTextListFormat_Style Style()
	{
		return CQt.QTextListFormat_Style((.)this.ptr.Ptr);
	}
	public void SetIndent(c_int indent)
	{
		CQt.QTextListFormat_SetIndent((.)this.ptr.Ptr, indent);
	}
	public c_int Indent()
	{
		return CQt.QTextListFormat_Indent((.)this.ptr.Ptr);
	}
	public void SetNumberPrefix(String numberPrefix)
	{
		CQt.QTextListFormat_SetNumberPrefix((.)this.ptr.Ptr, libqt_string(numberPrefix));
	}
	public void NumberPrefix(String outStr)
	{
		CQt.QTextListFormat_NumberPrefix((.)this.ptr.Ptr);
	}
	public void SetNumberSuffix(String numberSuffix)
	{
		CQt.QTextListFormat_SetNumberSuffix((.)this.ptr.Ptr, libqt_string(numberSuffix));
	}
	public void NumberSuffix(String outStr)
	{
		CQt.QTextListFormat_NumberSuffix((.)this.ptr.Ptr);
	}
	public void Swap(IQTextFormat other)
	{
		CQt.QTextFormat_Swap((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public void Merge(IQTextFormat other)
	{
		CQt.QTextFormat_Merge((.)this.ptr.Ptr, (.)other?.ObjectPtr);
	}
	public bool IsEmpty()
	{
		return CQt.QTextFormat_IsEmpty((.)this.ptr.Ptr);
	}
	public c_int Type()
	{
		return CQt.QTextFormat_Type((.)this.ptr.Ptr);
	}
	public c_int ObjectIndex()
	{
		return CQt.QTextFormat_ObjectIndex((.)this.ptr.Ptr);
	}
	public void SetObjectIndex(c_int object)
	{
		CQt.QTextFormat_SetObjectIndex((.)this.ptr.Ptr, object);
	}
	public QVariant_Ptr Property(c_int propertyId)
	{
		return QVariant_Ptr(CQt.QTextFormat_Property((.)this.ptr.Ptr, propertyId));
	}
	public void SetProperty(c_int propertyId, IQVariant value)
	{
		CQt.QTextFormat_SetProperty((.)this.ptr.Ptr, propertyId, (.)value?.ObjectPtr);
	}
	public void ClearProperty(c_int propertyId)
	{
		CQt.QTextFormat_ClearProperty((.)this.ptr.Ptr, propertyId);
	}
	public bool HasProperty(c_int propertyId)
	{
		return CQt.QTextFormat_HasProperty((.)this.ptr.Ptr, propertyId);
	}
	public bool BoolProperty(c_int propertyId)
	{
		return CQt.QTextFormat_BoolProperty((.)this.ptr.Ptr, propertyId);
	}
	public c_int IntProperty(c_int propertyId)
	{
		return CQt.QTextFormat_IntProperty((.)this.ptr.Ptr, propertyId);
	}
	public double DoubleProperty(c_int propertyId)
	{
		return CQt.QTextFormat_DoubleProperty((.)this.ptr.Ptr, propertyId);
	}
	public void StringProperty(String outStr, c_int propertyId)
	{
		CQt.QTextFormat_StringProperty((.)this.ptr.Ptr, propertyId);
	}
	public QColor_Ptr ColorProperty(c_int propertyId)
	{
		return QColor_Ptr(CQt.QTextFormat_ColorProperty((.)this.ptr.Ptr, propertyId));
	}
	public QPen_Ptr PenProperty(c_int propertyId)
	{
		return QPen_Ptr(CQt.QTextFormat_PenProperty((.)this.ptr.Ptr, propertyId));
	}
	public QBrush_Ptr BrushProperty(c_int propertyId)
	{
		return QBrush_Ptr(CQt.QTextFormat_BrushProperty((.)this.ptr.Ptr, propertyId));
	}
	public QTextLength_Ptr LengthProperty(c_int propertyId)
	{
		return QTextLength_Ptr(CQt.QTextFormat_LengthProperty((.)this.ptr.Ptr, propertyId));
	}
	public void* LengthVectorProperty(c_int propertyId)
	{
		return CQt.QTextFormat_LengthVectorProperty((.)this.ptr.Ptr, propertyId);
	}
	public void SetProperty2(c_int propertyId, void** lengths)
	{
		CQt.QTextFormat_SetProperty2((.)this.ptr.Ptr, propertyId, lengths);
	}
	public void* Properties()
	{
		return CQt.QTextFormat_Properties((.)this.ptr.Ptr);
	}
	public c_int PropertyCount()
	{
		return CQt.QTextFormat_PropertyCount((.)this.ptr.Ptr);
	}
	public void SetObjectType(c_int type)
	{
		CQt.QTextFormat_SetObjectType((.)this.ptr.Ptr, type);
	}
	public c_int ObjectType()
	{
		return CQt.QTextFormat_ObjectType((.)this.ptr.Ptr);
	}
	public bool IsCharFormat()
	{
		return CQt.QTextFormat_IsCharFormat((.)this.ptr.Ptr);
	}
	public bool IsBlockFormat()
	{
		return CQt.QTextFormat_IsBlockFormat((.)this.ptr.Ptr);
	}
	public bool IsListFormat()
	{
		return CQt.QTextFormat_IsListFormat((.)this.ptr.Ptr);
	}
	public bool IsFrameFormat()
	{
		return CQt.QTextFormat_IsFrameFormat((.)this.ptr.Ptr);
	}
	public bool IsImageFormat()
	{
		return CQt.QTextFormat_IsImageFormat((.)this.ptr.Ptr);
	}
	public bool IsTableFormat()
	{
		return CQt.QTextFormat_IsTableFormat((.)this.ptr.Ptr);
	}
	public bool IsTableCellFormat()
	{
		return CQt.QTextFormat_IsTableCellFormat((.)this.ptr.Ptr);
	}
	public QTextBlockFormat_Ptr ToBlockFormat()
	{
		return QTextBlockFormat_Ptr(CQt.QTextFormat_ToBlockFormat((.)this.ptr.Ptr));
	}
	public QTextCharFormat_Ptr ToCharFormat()
	{
		return QTextCharFormat_Ptr(CQt.QTextFormat_ToCharFormat((.)this.ptr.Ptr));
	}
	public QTextListFormat_Ptr ToListFormat()
	{
		return QTextListFormat_Ptr(CQt.QTextFormat_ToListFormat((.)this.ptr.Ptr));
	}
	public QTextTableFormat_Ptr ToTableFormat()
	{
		return QTextTableFormat_Ptr(CQt.QTextFormat_ToTableFormat((.)this.ptr.Ptr));
	}
	public QTextFrameFormat_Ptr ToFrameFormat()
	{
		return QTextFrameFormat_Ptr(CQt.QTextFormat_ToFrameFormat((.)this.ptr.Ptr));
	}
	public QTextImageFormat_Ptr ToImageFormat()
	{
		return QTextImageFormat_Ptr(CQt.QTextFormat_ToImageFormat((.)this.ptr.Ptr));
	}
	public QTextTableCellFormat_Ptr ToTableCellFormat()
	{
		return QTextTableCellFormat_Ptr(CQt.QTextFormat_ToTableCellFormat((.)this.ptr.Ptr));
	}
	public void SetLayoutDirection(Qt_LayoutDirection direction)
	{
		CQt.QTextFormat_SetLayoutDirection((.)this.ptr.Ptr, direction);
	}
	public Qt_LayoutDirection LayoutDirection()
	{
		return CQt.QTextFormat_LayoutDirection((.)this.ptr.Ptr);
	}
	public void SetBackground(IQBrush brush)
	{
		CQt.QTextFormat_SetBackground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Background()
	{
		return QBrush_Ptr(CQt.QTextFormat_Background((.)this.ptr.Ptr));
	}
	public void ClearBackground()
	{
		CQt.QTextFormat_ClearBackground((.)this.ptr.Ptr);
	}
	public void SetForeground(IQBrush brush)
	{
		CQt.QTextFormat_SetForeground((.)this.ptr.Ptr, (.)brush?.ObjectPtr);
	}
	public QBrush_Ptr Foreground()
	{
		return QBrush_Ptr(CQt.QTextFormat_Foreground((.)this.ptr.Ptr));
	}
	public void ClearForeground()
	{
		CQt.QTextFormat_ClearForeground((.)this.ptr.Ptr);
	}
}
interface IQTextListFormat : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextImageFormat
// --------------------------------------------------------------
[CRepr]
struct QTextImageFormat_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextImageFormat_new")]
	public static extern QTextImageFormat_Ptr QTextImageFormat_new();
	[LinkName("QTextImageFormat_Delete")]
	public static extern void QTextImageFormat_Delete(QTextImageFormat_Ptr self);
	[LinkName("QTextImageFormat_IsValid")]
	public static extern bool QTextImageFormat_IsValid(void* self);
	[LinkName("QTextImageFormat_SetName")]
	public static extern void QTextImageFormat_SetName(void* self, libqt_string name);
	[LinkName("QTextImageFormat_Name")]
	public static extern libqt_string QTextImageFormat_Name(void* self);
	[LinkName("QTextImageFormat_SetWidth")]
	public static extern void QTextImageFormat_SetWidth(void* self, double width);
	[LinkName("QTextImageFormat_Width")]
	public static extern double QTextImageFormat_Width(void* self);
	[LinkName("QTextImageFormat_SetHeight")]
	public static extern void QTextImageFormat_SetHeight(void* self, double height);
	[LinkName("QTextImageFormat_Height")]
	public static extern double QTextImageFormat_Height(void* self);
	[LinkName("QTextImageFormat_SetQuality")]
	public static extern void QTextImageFormat_SetQuality(void* self, c_int quality);
	[LinkName("QTextImageFormat_SetQuality2")]
	public static extern void QTextImageFormat_SetQuality2(void* self);
	[LinkName("QTextImageFormat_Quality")]
	public static extern c_int QTextImageFormat_Quality(void* self);
}
